--- a/new-mac-lead.html
+++ b/new-mac-lead.html
@@ -21,8 +21,133 @@
     <title>New-mac-lead-shear</title>
 </head>
 <body>
+  <section class="top-section">
+    <div class="container">
+        <div class="row ">
+            <div class="col-sm-12 col-md-6">
+                <p class="pt-3 pngd">WELCOME TO CASHYEW LEADS</p>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <ul class="top-hedder-support-section pt-3">
+                    <li>                        	
+                        <a href="#"><i class="fa fa-phone"></i></a> 
+                        <a href="#"><span>1-888-999-000</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-envelope"></i></a>
+                        <a href="#"> <span>support@cashyewleads.com</span> </a>
+                    </li>
+                    <br>
+                    <Span>|</Span>
+                    <li>
+                        <a href="#">	
+                            <i class="fa fa-shopping-cart">0</i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  </section>
+<section class="navbar-section">
+  <div class="container p-0">
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="./images/logo-new-mac-lead.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-laft-sec">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">BAYDATA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">LEADS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">ABOUT</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <button id="btn-taxt-color" class="btn btn-outline-success" type="submit">ACCOUNT</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </div>
+</section>
 
-    
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<main class="container">
+  <section class="main-hedding-start">
+    <div class="row hedding">
+      <div class="col-md-6 head-img">
+        <img src="./images/img13.png" alt="">
+      </div>
+      <div class="col-md-6 head-title">
+        <h1>VALIDATED MCA LEADS AND DATA</h1>
+        <p>We are the premiere lead and data provider for the MCA Industry. Our on-demand platform provides the only fully validated phone and email leads and data in the MCA industry.</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="row mt-5 data-up-to-card">
+      <div class="col-md-3 lead-data-card">
+        <div class="lead-data">
+          <img src="./images/img-14.png" alt="">
+          <p>VALIDATED MCA LEADS AND DATA</p>
+        </div>
+      </div>
+      <div class="col-md-3 purchase-record-card">
+        <div class="purchase-record">
+          <img src="./images/img-15.png" alt="">
+          <p>NO DUPES GUARANTEE WITH PURCHASE RECORD SUPPRESSION</p>
+        </div>
+      </div>
+      <div class="col-md-3 phone-number-card">
+        <div class="phone-number">
+          <img src="./images/img-4.png" alt="">
+          <p>VALIDATED EMAILS
+              VERIFIED PHONE NUMBERS</p>
+        </div>
+      </div>
+      <div class="col-md-3 up-to-data-card">
+        <div class="up-to-data">
+          <img src="./images/img-4.png" alt="">
+          <p>VALIDATED MCA LEADS AND DATA</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+<section>
+  <div class="purchase-data-card-section">
+    <div class="purchase">
+      <h3>PURCHASE DATA</h3>
+      <p>Pre-paid Data Credits <br>
+        Get up to 20% Bonus Credit on Data Purchases</p>
+    </div>
+    <div class="purchase-get-bunas">
+      <button class="purchase-btn"><a href="#">GET 20% BUNAS</a></button>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">      
+    </script>
 </body>
 </html>
